--- a/Firmware/lib_classes_MVS2017/StaticLib_MPPT/StaticLib_MPPT/StaticLib_MPPT.vcxproj
+++ b/Firmware/lib_classes_MVS2017/StaticLib_MPPT/StaticLib_MPPT/StaticLib_MPPT.vcxproj
@@ -149,10 +149,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="class_A.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="class_A.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
