--- a/Firmware/lib_classes_MVS2017/StaticLib_MPPT/StaticLib_MPPT/StaticLib_MPPT.vcxproj.filters
+++ b/Firmware/lib_classes_MVS2017/StaticLib_MPPT/StaticLib_MPPT/StaticLib_MPPT.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClInclude Include="targetver.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="class_A.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="class_A.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
