--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
 # ALL Debug files
-*/Firmware/lib_classes_MVS2017/StaticLib_MPPT/Debug/
-Firmware/lib_classes_MVS2017/StaticLib_MPPT/Debug2 Ч копи€/
+**/Debug
